feat: Rebrand app to North Africa TV, upgrade Capacitor to v8, and implement safe area support.

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,15 @@
 @import "tailwindcss";
-:root{
+
+:root {
     --plyr-color-main: var(--color-blue-950);
+    --safe-top: env(safe-area-inset-top);
+    --safe-right: env(safe-area-inset-right);
+    --safe-bottom: env(safe-area-inset-bottom);
+    --safe-left: env(safe-area-inset-left);
+}
+
+
+
+header.header {
+    padding-top: env(safe-area-inset-top) !important;
 }
